# libgphoto2

./: Makefile.am  configure.ac  libgphoto2.pc.in
camlibs/ax203/: ax203.c  tinyjpeg-internal.h  tinyjpeg.c  tinyjpeg.h
camlibs/digigr8/: digi_postprocess.c  digigr8.h  library.c
camlibs/jl2005a/: jl2005a.c  jl2005a.h  library.c
camlibs/jl2005c/: img_enhance.c  img_enhance.h  jl2005bcd_decompress.c  jl2005c.c  jl2005c.h  library.c
camlibs/mars/: mars.c  mars.h
camlibs/pentax/: pslr_model.c  pslr_model.h
camlibs/sonix/: library.c  sonix.c  sonix.h
libgphoto2/: Makefile.am  gphoto2-abilities-list.c  gphoto2-camera.c
libgphoto2_port/: configure.ac  libgphoto2_port.pc.in
libgphoto2_port/disk/: Makefile-files
libgphoto2_port/gphoto-m4/: gp-camlibs.m4  gp-check-library.m4  gp-libjpeg.m4
libgphoto2_port/libgphoto2_port/: Makefile.am  gphoto2-port-info-list.c  gphoto2-port.c
libgphoto2_port/libusb1/: Makefile-files
libgphoto2_port/ptpip/: Makefile-files
libgphoto2_port/serial/: Makefile-files
libgphoto2_port/usb/: Makefile-files
libgphoto2_port/usbdiskdirect/: Makefile-files
libgphoto2_port/usbscsi/: Makefile-files
libgphoto2_port/vusb/: Makefile-files
